--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <div id="app">
         <h1>{{ message }}</h1>
+        <div>
+            <img v-bind:src="image" alt="">
+        </div>
       </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
